# recruit

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  about.html  agentic-architecture.html  candidates.html  career-coach.html  contact.html  employers.html  firebase.json  forward-deployed.html  index.html  scheduler-flow.html  scheduler_architecture_guide.md  services.html  styles.css  system-design-3d.html  system-design.html
.claude/: settings.json
agentic_system/: .env.example  Dockerfile  config.py  db.py  fix_human_review_emails.py  gemini_client.py  github_sourcer.py  job_scrapers.py  migrate.py  orchestrator.py  pyproject.toml  run_agents.sh  schema_agents.sql  test_azure.py
agentic_system/agents/: ats_agent.py  base_agent.py  client_outreach_agent.py  job_posting_agent.py  matching_agent.py  self_healing_agent.py  sourcing_agent.py  submission_agent.py  vms_agent.py
agentic_system/mcp_servers/: ats_mcp_server.py  comm_mcp_server.py  vms_mcp_server.py
agentic_system/scratch/: login_indeed.py
agentic_system/westley_agentic_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: index.html
carrercoach/: .env.example  package-lock.json  package.json  server.js  test-crash.js
client/: index.html  package-lock.json  package.json  vite.config.js
data/: fde-practice.json  fde-practice.schema.md
functions/: index.js  package-lock.json  package.json
graphify-out/: .chunk_1.txt  .chunk_10.txt  .chunk_11.txt  .chunk_12.txt  .chunk_13.txt  .chunk_14.txt  .chunk_15.txt  .chunk_16.txt  .chunk_17.txt  .chunk_18.txt  .chunk_19.txt  (+17 more)
(+37 files in other folders)
