[project]
name = "westley-agentic-system"
version = "1.0.0"
description = "Agentic AI Candidate Placement System — Westley Resource"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "google-ai-generativelanguage>=0.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "mcp>=1.3.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.0",
    "numpy>=2.0.0",
    "apscheduler>=3.10.0",
    "requests>=2.32.0",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "anyio>=4.6.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "mcp_servers*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
